# discord-virtual-micro

./: .gitignore  README.md  client.py  config-example.json  config.json  main.py  pyproject.toml  requirements.txt  speach.py  text.py  words.json
.github/workflow/: create-release.yml
.github/workflows/: create-release.yml
src/: client.py  config-example.json  main.py  speach.py
src/commands/: del_word.py  set_word.py
src/discord_virtual_micro/: __init__.py  client.py  config-example.json  speach.py
src/discord_virtual_micro/abc/: command.py  event.py
src/discord_virtual_micro/commands/: del_word.py  set_word.py
src/discord_virtual_micro/events/: on_command_error.py  on_message.py  on_ready.py
src/discord_virtual_micro/patches/: get_signature_parameters.py
src/discord_virtual_micro/utils/: config.py  module.py  patcher.py  text.py
src/events/: on_command_error.py  on_message.py  on_ready.py
src/utils/: text.py
